# Viola-Jones

./: .gitattributes  .gitignore  10_0.1_round_results.csv  10_0.2_round_results.csv  10_0.5_round_results.csv  10_0.8_round_results.csv  10_0.9_round_results.csv  10_round_results.csv  5_0.1_round_results.csv  5_0.2_round_results.csv  5_0.5_round_results.csv  5_0.8_round_results.csv  Cargo.toml  Displaying_features.py  Final Report.docx  Haar_Feature.py  Modified_Ada_boost.py  README.md  ada_boost.py  feature_extraction.py  index.html  main.py  package-lock.json  package.json  requirements.txt  test.py  train.py  ~$nal Report.docx
Data/: test_data.csv  train_data.csv
dataset/: .hardcore.jpg.icloud
grad_project/: ada_boost.py  cascade_exploration.ipynb  dataset_generation.py  features_names.csv  main.py  model_exploration.ipynb  test.py  train.py
grad_project/results/: 10_0.1_round_results.csv  5_0.2_round_results.csv
grad_project/tests/utils/: test_ada_boost.py  (+2 more)
grad_project/utils/: AdaBoost.py  ada_boost.py  decision_stamp.py  displaying_features.py  feature_extraction.py  logger.py  visualization.py
my-crate/: Cargo.toml
my-crate/src/: lib.rs
project_reports/results/: 10_0.9_round_results.csv
python/: README.md  requirements.txt  test.py  train.py
python/libs/: ada_boost.py  classifier.py  decision_stamp.py  feature_extraction.py  visualization.py
python/results/: 10_round_results.csv  5_0.8_round_results.csv  5_0.9_round_results.csv
results/: 40_round_results.csv
src/: main.ts
static/: index.css
utils/: AdaBoost.py  utils.py
(+4 files in other folders)
