[package]
name = "my-crate"
authors = ["Abhay Vashist <abhay.vashist1998@gmail.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2"

# new material
[lib]
crate-type = ["cdylib"]